--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -11,6 +11,7 @@
 .contactNav {
 	display: inline-flex;
 	margin: 0px;
+	margin-bottom: 20px;
 	padding: 8px;
 	background-image: url("../../assets/textures/prism.png");
 	border-width: 2px 0px 0px 0px;
